Overall JEE depencies update to Jakarta EE 8