@@ -86,7 +86,7 @@ public class ACLManager implements ConfigurationListener
         try {
             Node node = XMLConfig.getNode(CFG_FILE_NAME, "/GVPolicy/*[@type='acl-manager']");
             String clazz = XMLConfig.get(node, "@class");
-            acl = (ACL) Class.forName(clazz).newInstance();
+            acl = (ACL) Class.forName(clazz).getConstructor().newInstance();
             acl.init(node);
         }
         catch (Exception exc) {
